# tei-iiif

./: .gitignore  CITATION.cff  README.md  __init__.py  __main__.py  divjson.py  getfile.py  main.py  manifestgen.py  pyproject.toml  settings.yaml  tempfilegen.py  xmlparser.py
m48-manifests/: m48-1-annotations.json  m48-2-annotations.json  m48-3-annotations.json  m48-4-annotations.json
tei-iiif/: __main__.py
tei-iiif/utils/: cleanup.py
tei_iiif/: __main__.py  divjson.py  getfile.py  manifestgen.py  settings.yaml  tempfilegen.py  xmlparser.py
tei_iiif/utils/: cleanup.py  settings.py
tests/: test_getfile.py  test_settings.py  testdoc.xml
utils/: cleanup.py  settings.py
