[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TEI-IIIF"
version = "0.1.10"
authors = [
  { name="Joshua Phillips", email="joshua.phillips@ell.ox.ac.uk" },
]
description = "A Python CLI app that pulls data from TEI-XML files and transforms them to conformant IIIF Annotation manifests."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joshuaAPhillips/tei-iiif"
"Bug Tracker" = "https://github.com/joshuaAPhillips/tei-iiif/issues"